@@ -4,6 +4,8 @@ import ru.dolgosheev.Color;
 import ru.dolgosheev.Coordinates;
 import ru.dolgosheev.CoordinatesShift;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 
 public class Knight extends Piece {
@@ -14,6 +16,19 @@ public class Knight extends Piece {
 
     @Override
     protected Set<CoordinatesShift> getPieceMoves() {
-        return Set.of();
+        return new HashSet<>(Arrays.asList(
+               new CoordinatesShift(1, 2),
+               new CoordinatesShift(2, 1),
+
+               new CoordinatesShift(2, -1),
+               new CoordinatesShift(1, -2),
+
+               new CoordinatesShift(-2, -1),
+               new CoordinatesShift(-1, -2),
+
+               new CoordinatesShift(-2, 1),
+               new CoordinatesShift(-1, 2)
+        )
+        );
     }
 }
